--- a/.github/workflows/compilation-check.yml
+++ b/.github/workflows/compilation-check.yml
@@ -7,7 +7,7 @@ on:
       - develop
 
 jobs:
-  build:
+  test:
     runs-on: macOS-latest
 
     steps:
@@ -16,5 +16,9 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
-      - name: Check build
-        run: ./gradlew build publishToMavenLocal
+      - name: Check runtime
+        run: ./gradlew build publishToMavenLocal syncMultiPlatformLibraryDebugFrameworkIosX64
+      - name: Install pods
+        run: cd sample/ios-app && pod install
+      - name: build ios sample
+        run: cd sample/ios-app && xcodebuild -scheme TestProj -workspace TestProj.xcworkspace -configuration Debug build CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO
