--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,17 @@ org.gradle.configureondemand=false
 org.gradle.parallel=true
 
 kotlin.code.style=official
-kotlin.mpp.enableGranularSourceSetsMetadata=true
-kotlin.mpp.enableCompatibilityMetadataVariant=true
-kotlin.native.enableDependencyPropagation=false
+kotlin.mpp.androidSourceSetLayoutVersion=2
 
 android.useAndroidX=true
+
+moko.android.targetSdk=33
+moko.android.compileSdk=33
+moko.android.minSdk=19
+
+moko.publish.name=MOKO biometry
+moko.publish.description=Biometry authentication with Touch ID, Face ID from common code with Kotlin Multiplatform Mobile
+moko.publish.repo.org=icerockdev
+moko.publish.repo.name=moko-biometry
+moko.publish.license=Apache-2.0
+moko.publish.developers=alex009|Aleksey Mikhailov|Aleksey.Mikhailov@icerockdev.com,Dorofeev|Andrey Dorofeev|adorofeev@icerockdev.com,kovalandrew|Andrey Kovalev|kovalev@icerockdev.com
