--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,16 +1,23 @@
 [versions]
-kotlinVersion = "1.5.20"
+kotlinVersion = "1.8.10"
 androidAppCompatVersion = "1.2.0"
 androidBiometricVersion = "1.0.1"
-coroutinesVersion = "1.5.0-native-mt"
-mokoResourcesVersion = "0.16.1"
-mokoMvvmVersion = "0.11.0"
-mokoBiometryVersion = "0.2.0"
+coroutinesVersion = "1.6.4"
+composeJetBrainsVersion = "1.3.1"
+mokoResourcesVersion = "0.21.1"
+mokoMvvmVersion = "0.16.0"
+mokoBiometryVersion = "0.3.0"
 
 [libraries]
 appCompat = { module = "androidx.appcompat:appcompat", version.ref = "androidAppCompatVersion" }
 biometric = { module = "androidx.biometric:biometric", version.ref = "androidBiometricVersion" }
 coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutinesVersion" }
-mokoMvvm = { module = "dev.icerock.moko:mvvm", version.ref = "mokoMvvmVersion" }
+mokoMvvm = { module = "dev.icerock.moko:mvvm-core", version.ref = "mokoMvvmVersion" }
 mokoResources = { module = "dev.icerock.moko:resources", version.ref = "mokoResourcesVersion" }
 
+kotlinGradlePlugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlinVersion" }
+androidGradlePlugin = { module = "com.android.tools.build:gradle", version = "7.4.2" }
+mokoGradlePlugin = { module = "dev.icerock.moko:moko-gradle-plugin", version = "0.2.0" }
+mobileMultiplatformGradlePlugin = { module = "dev.icerock:mobile-multiplatform", version = "0.14.2" }
+composeJetBrainsGradlePlugin = { module = "org.jetbrains.compose:compose-gradle-plugin", version.ref = "composeJetBrainsVersion" }
+detektGradlePlugin = { module = "io.gitlab.arturbosch.detekt:detekt-gradle-plugin", version = "1.22.0" }
